# connectivity_connectivity_cangjie_wrapper

./: BUILD.gn  README.md  README_zh.md  bundle.json
kit/ConnectivityKit/: BUILD.gn  index.cj
mock/: ohos.bluetooth.a2dp.cj  ohos.bluetooth.access.cj  ohos.bluetooth.base_profile.cj  ohos.bluetooth.ble.cj  ohos.bluetooth.cj  ohos.bluetooth.connection.cj  ohos.bluetooth.constant.cj  ohos.bluetooth.hfp.cj  ohos.wifi_manager.cj
ohos/bluetooth/: BUILD.gn  callback_controller.cj  error_message.cj
ohos/bluetooth/a2dp/: BUILD.gn  a2dp.cj  native.cj
ohos/bluetooth/access/: BUILD.gn  access.cj  callback.cj  native.cj
ohos/bluetooth/baseProfile/: BUILD.gn  base_profile.cj
ohos/bluetooth/base_profile/: BUILD.gn  base_profile.cj
ohos/bluetooth/ble/: BUILD.gn  ble.cj  gatt_client_device.cj  gatt_server.cj  gatt_util.cj  native.cj  util.cj
ohos/bluetooth/connection/: BUILD.gn  callback.cj  connection.cj  native.cj
ohos/bluetooth/constant/: BUILD.gn  constant.cj
ohos/bluetooth/hfp/: BUILD.gn  hands_free_audio_gateway_profile.cj
ohos/wifi_manager/: BUILD.gn  common.cj  error_code.cj  ip_info.cj  wifi.cj  wifi_info_elem.cj  wifi_p2p_config.cj  wifi_scan_info.cj
test/APILevel21/bluetooth/test/entry/src/main/cangjie/src/: Test_a2dp.cj  Test_baseProfile.cj  Test_ble.cj  Test_constant.cj  Test_hfp.cj  ability_stage.cj  main_ability.cj
test/APILevel21/wifi_manager/test/entry/src/main/: module.json5
test/APILevel21/wifi_manager/test/entry/src/main/cangjie/src/: Test_WifiManager.cj
test/APILevel22/bluetooth/test/entry/src/main/: module.json5
test/APILevel22/bluetooth/test/entry/src/main/cangjie/src/: Test_baseProfile.cj  Test_ble.cj  Test_constant.cj  Test_hfp.cj  index.cj
test/bluetooth/test/: profile.json
test/bluetooth/test/entry/src/main/: module.json5
test/bluetooth/test/entry/src/main/cangjie/src/: Test_a2dp.cj  Test_baseProfile.cj  Test_ble.cj  Test_constant.cj  Test_hfp.cj  index.cj  main_ability.cj  test_list_bluetooth.cj
test/hide_connectivity/test/entry/src/main/cangjie/src/: Test_hide_connectivity.cj  test_list_hide_connectivity.cj
test/wifi_manager/test/entry/src/main/: module.json5
test/wifi_manager/test/entry/src/main/cangjie/src/: Test_WifiManager.cj  test_list_WifiManager.cj
