# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/templates/cangjie/cjc.gni")

connectivity_cangjie_wrapper_packages_ohos = [
    "//foundation/communication/connectivity_cangjie_wrapper/ohos/bluetooth/connection:ohos.bluetooth.connection",
    "//foundation/communication/connectivity_cangjie_wrapper/ohos/bluetooth/base_profile:ohos.bluetooth.base_profile",
    "//foundation/communication/connectivity_cangjie_wrapper/ohos/bluetooth:ohos.bluetooth",
    "//foundation/communication/connectivity_cangjie_wrapper/ohos/bluetooth/hfp:ohos.bluetooth.hfp",
    "//foundation/communication/connectivity_cangjie_wrapper/ohos/bluetooth/constant:ohos.bluetooth.constant",
    "//foundation/communication/connectivity_cangjie_wrapper/ohos/wifi_manager:ohos.wifi_manager",
    "//foundation/communication/connectivity_cangjie_wrapper/ohos/bluetooth/ble:ohos.bluetooth.ble",
    "//foundation/communication/connectivity_cangjie_wrapper/ohos/bluetooth/a2dp:ohos.bluetooth.a2dp"
]
connectivity_cangjie_wrapper_packages_kit = [
    "//foundation/communication/connectivity_cangjie_wrapper/kit/ConnectivityKit:kit.ConnectivityKit",
]

copy_ohos_cangjie_sdk_api_lib("copy_sdk_connectivity_cangjie_libs") {
  ohos_inputs = connectivity_cangjie_wrapper_packages_ohos
  kit_inputs = connectivity_cangjie_wrapper_packages_kit
}