# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/cangjie/cjc.gni")

ohos_cangjie_shared_library("ohos.wifi_manager") {
  sources = [
    "common.cj",
    "error_code.cj",
    "ip_info.cj",
    "wifi_info_elem.cj",
    "wifi_p2p_config.cj",
    "wifi_scan_info.cj",
    "wifi.cj",
  ]

  cj_external_deps = [
    "cangjie_ark_interop:ohos.business_exception",
    "cangjie_ark_interop:ohos.callback_invoke",
    "cangjie_ark_interop:ohos.ffi",
    "cangjie_ark_interop:ohos.labels",
    "hiviewdfx_cangjie_wrapper:ohos.hilog",
  ]

  external_deps = [ "wifi:cj_wifi_ffi" ]

  subsystem_name = "communication"
  part_name = "connectivity_cangjie_wrapper"
}
