# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/cangjie/cjc.gni")

ohos_cj_library("ohos.bluetooth.ble") {
  sources = [
    "ble.cj",
    "gatt_client_device.cj",
    "gatt_server.cj",
    "gatt_util.cj",
    "native.cj",
    "util.cj",
  ]

  external_deps = [ "bluetooth:cj_bluetooth_ble_ffi" ]

  cj_external_deps = [
    "arkui_cangjie_api:ohos.base",
    "cangjie_api:ohos.ffi",
    "cangjie_api:ohos.labels",
    "hiviewdfx_cangjie_api:ohos.hilog",
  ]

  cj_deps = [
    "../:ohos.bluetooth",
    "../constant:ohos.bluetooth.constant",
  ]

  subsystem_name = "communication"
  part_name = "connectivity_cangjie_api"
  lib_name = "bluetooth.ble"
}
